[project]
name = "chatgpt-web"
version = "0.1.0"
description = "ChatGPT Web Python client with Playwright automation"
readme = "README.md"
requires-python = ">=3.10"
authors = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openai>=1.0.0",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
resolution = "highest"

[tool.uv.sources]
